tests/src/frontend/typechecking/invalid/frozen_lambda_3.sk
fun no(): void {
  freeze(((() -> void) : () -> void))
}
